<resources>
    <string name="app_name">RickAndMorty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="status">status</string>
    <string name="type">type</string>
    <string name="species">species</string>
    <string name="gender">gender</string>
    <string name="empty_list">There are no data. Check your internet connection</string>
    <string name="filter">There are no matching elements.</string>
    <string name="error_loading">Error loading data</string>
    <string name="retry_loading">Retry</string>
    <string name="episode">Episode</string>
    <string name="air_date">Air date</string>
    <string name="dimension">Dimension</string>
    <string name="type_location">Type</string>
    <string name="type_view">Type: </string>
    <string name="type_hint">type</string>
    <string name="created">Created: </string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="air_date_text">Air date:</string>
    <string name="episode_text">Episode:</string>
    <string name="created_text">Created:</string>
    <string name="unknown">unknown</string>
    <string name="dimension_text">Dimension:</string>
    <string name="type_text">Type:</string>
    <string name="residents">Residents:</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_species">Enter species</string>
    <string name="enter_type">Enter type</string>
    <string name="search">Search</string>
    <string name="search_name">Search name</string>
    <string name="enter_dimension">Enter dimension</string>
    <string name="enter_episode">Enter episode</string>
    <string name="back">Back</string>
    <string name="there_are_no_residents">There are no residents</string>
    <string name="no_residents">There are no residents in this location</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="genderless">Genderless</string>
    <string name="male">Male</string>
    <string name="female">female</string>
</resources>