<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".characterDetails.CharacterDetailsFragment">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_margin="@dimen/common_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/min_margin"
        android:text="@string/id"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/min_margin"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@id/id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/min_margin"
        android:layout_marginStart="@dimen/common_margin"
        android:text="@string/species"
        android:textColor="#546E7A"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/min_margin"
        android:layout_marginStart="@dimen/common_margin"
        android:text="@string/status"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/species" />


    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/min_margin"
        android:text="@string/gender"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/status" />

    <TextView
        android:id="@+id/type_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/min_margin"
        android:text="@string/type_view"
        android:textColor="#546E7A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/min_margin"
        android:text="@string/type_hint"
        app:layout_constraintStart_toEndOf="@id/type_view"
        app:layout_constraintTop_toBottomOf="@id/avatar" />

    <TextView
        android:id="@+id/created_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/min_margin"
        android:text="@string/created"
        android:textColor="#546E7A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_view" />

    <TextView
        android:id="@+id/created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/min_margin"
        android:text="@string/created"
        app:layout_constraintStart_toEndOf="@id/created_view"
        app:layout_constraintTop_toBottomOf="@id/type" />

    <TextView
        android:id="@+id/origin_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/min_margin"
        android:text="@string/origin"
        android:textColor="#546E7A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/created_view" />

    <TextView
        android:id="@+id/origin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/min_margin"
        android:text="@string/origin"
        android:textColor="#546E7A"
        app:layout_constraintStart_toEndOf="@id/origin_view"
        app:layout_constraintTop_toBottomOf="@id/created" />


    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/min_margin"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/origin_view" />

    <TextView
        android:id="@+id/location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/min_margin"
        android:text="@string/location"
        android:textColor="#546E7A"
        app:layout_constraintStart_toEndOf="@id/location"
        app:layout_constraintTop_toBottomOf="@id/origin_name" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/min_margin"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="location_name" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:listitem="@layout/card_episode" />

</androidx.constraintlayout.widget.ConstraintLayout>